# pylinx

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  linx.ps1  linx.py  linx.sh  pylinx.ps1  pyproject.toml  requirements.txt
assets/: README.md
config/: linxConfig.EXAMPLE.toml
linxcore/: config.py  utilities.py
pylinx/: __init__.py  linx.py
pylinx/linxcore/: config.py  exceptions.py  utilities.py
scripts/: generate_requirements.sh  install_linx-pyclient.py  install_pylinx.py  win-add_to_context_menu.py  win-install_pylinx_client.ps1  win-run_from_context_menu.ps1
