[tool.poetry]
name = "linx-pyclient"
version = "0.1.0"
description = "A lightweight CLI for uploading and managing your files on a linx-server instance."
authors = ["Simon GoriÄar <simon.peter.goricar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
requests = "^2.24.0"
requests_toolbelt = "^0.9.1"
pyperclip = "^1.8.1"
click = "^7.1.2"
"hurry.filesize" = "^0.9"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
